--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager . bobo --all --out ../electron"
+    "package": "electron-packager . bobo --out ../electron"
   },
   "repository": "https://github.com/yued-fe/bobo-electron",
   "keywords": [
