--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "bobo-electron",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "manifest": [{
       "version": "1.2.0",
       "file": ["lulu.js", "index.html", "main.css", "renderer.js", "symbol-defs.svg"],
       "detail": ["新增项目编辑功能", "增加右键复制剪切粘贴功能", "修复起点、创世书籍分发跳转的一个bug", "支持版本检测与更新"]
+  }, {
+      "version": "1.2.1",
+      "file": ["lulu.js", "index.html", "renderer.js"],
+      "detail": ["修复Datalist失效问题", "自动升级机制更健壮"]
   }],
   "description": "波波Electron桌面版",
   "main": "main.js",
