--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   }, {
       "version": "1.2.2",
       "file": ["renderer.js", "src/index.html", "src/css/style.css"],
+      "detail": ["App内分享按钮智能显示", "内置响应式rem开发CSS代码"]
   }],
   "description": "波波Electron桌面版",
   "main": "main.js",
