--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bobo-electron",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "manifest": [{
       "version": "1.2.0",
       "file": ["lulu.js", "index.html", "main.css", "renderer.js", "symbol-defs.svg"],
@@ -20,7 +20,7 @@
   }, {
       "version": "1.2.4",
       "file": ["renderer.js", "index.html", "src/index.html", "src/css/style.css"],
-      "detail": ["增加动态模块等文档说明", "增加对海外版页面的支持"]
+      "detail": ["增加动态模块等文档说明", "增加对海外版页面的支持", "支持更新时候删除文件"]
   }],
   "description": "波波Electron桌面版",
   "main": "main.js",
