--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bobo-electron",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "manifest": [{
       "version": "1.2.0",
       "file": ["lulu.js", "index.html", "main.css", "renderer.js", "symbol-defs.svg"],
@@ -21,6 +21,10 @@
       "version": "1.2.4",
       "file": ["renderer.js", "index.html", "src/index.html", "src/css/style.css"],
       "detail": ["增加动态模块等文档说明", "增加对海外版页面的支持", "支持更新时候删除文件"]
+  }, {
+      "version": "1.2.5",
+      "file": ["renderer.js", "index.html", "main.css"],
+      "detail": ["增加项目删除功能", "统计代码优先基于当前域名确定", "修复不勾选压缩不生成线上模板的问题", "海外版增加ga统计"]
   }],
   "description": "波波Electron桌面版",
   "main": "main.js",
