--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bobo-electron",
-  "version": "1.2.9",
+  "version": "1.2.10",
   "manifest": [{
       "version": "1.2.0",
       "file": ["lulu.js", "index.html", "main.css", "renderer.js", "symbol-defs.svg"],
@@ -41,6 +41,10 @@
       "version": "1.2.9",
       "file": ["renderer.js", "src/run.js"],
       "detail": ["HTML压缩空格不完全剔除", "QCSS功能模块采用在线加载方式"]
+  }, {
+      "version": "1.2.10",
+      "file": ["renderer.js"],
+      "detail": ["添加acts.yuewen.com统计代码"]
   }],
   "description": "波波Electron桌面版",
   "main": "main.js",
